             ones used on Windows.

 * win32/:
   - [MISC]  Remove the rather ugly HTML version of the man page from the
             distribution, and provide a much better PDF version instead.

 * various:
   - [ADD]   Allow ezstream to use TagLib for reading metadata from media
             files. TagLib (libtag_c) is now an optional dependency.



Changes in 0.3.0, released on 2007-03-05:

 * The original author, Ed Zaleski, hands over ezstream maintainership to
   Moritz Grimm.

 * New features:
   - Playlist shuffling support, enabled via the new <shuffle> configuration
     option.
   - Playlist scripting support: Indicate that the executable in <filename>
     should be run each time to get a new media filename to stream, by setting
     the new <playlist_program> configuration option to 1.
   - New <stream_once> configuration option, which makes ezstream play a media
     file or playlist once and then exit.
   - New <reconnect_tries> option to restrict the number of reconnection
     attempts to a server in case the connection goes down.
   - Add feature to skip the currently streaming track, done by sending the
     SIGUSR1 signal to the ezstream process.
   - New command line option `-q': Suppress standard error output from external
     de-/encoders.
   - New command line option `-v': Produce more verbose output.
   - New "real-time" status display of the stream when both -q and -v are given
     on the command line.
   - Thorough configuration file checks with helpful error messages.
   - The @M@ metadata placeholder is now supported in <decode>.
   - Playlists may now have the '.txt' filename extension in addition to
     '.m3u'.

 * Fixes:
   - At least one stack and one heap overflow have been fixed.
   - Several memory leaks have been fixed.
   - Strict checking of the configuration file prevents unexpected behavior and
     adds another safeguard to prevent crashes.
   - Fixed and more portable signal handling.
