@@ -19,6 +19,12 @@ Changes in 0.4.0, (SVN trunk):
  * various:
    - [ADD]   Allow ezstream to use TagLib for reading metadata from media
              files. TagLib (libtag_c) is now an optional dependency.
+   - [ADD]   New <metadata_progname> configuration option, which causes
+             metadata to be read from the output of an external program or
+             script.
+   - [ADD]   New runtime control via the SIGUSR2 signal, which triggers reading
+             of fresh metadata information from <metadata_progname> (metadata
+             is always read at song changes.)
 
 
 
